@@ -22,12 +22,25 @@ this repository contains the full copyright notices and license terms. -->
                     <field name="prefix"/>
                     <label name="suffix"/>
                     <field name="suffix"/>
-                    <label name="padding"/>
-                    <field name="padding" />
-                    <label name="number_increment"/>
-                    <field name="number_increment"/>
-                    <label name="number_next"/>
-                    <field name="number_next"/>
+                    <label name="type"/>
+                    <field name="type"/>
+                    <group string="Incremental" id="incremental" colspan="4"
+                        states="{'invisible': Not(In(Eval('type'), ['incremental']))}">
+                        <label name="padding"/>
+                        <field name="padding" />
+                        <label name="number_increment"/>
+                        <field name="number_increment"/>
+                        <label name="number_next"/>
+                        <field name="number_next"/>
+                    </group>
+                    <group string="Timestamp" id="timestamp" colspan="4"
+                        states="{'invisible': Not(In(Eval('type'), ['decimal timestamp', 'hexadecimal timestamp']))}">
+                        <label name="timestamp_rounding"/>
+                        <field name="timestamp_rounding"/>
+                        <label name="timestamp_offset"/>
+                        <field name="timestamp_offset"/>
+                        <field name="last_timestamp"/>
+                    </group>
                     <separator string="Legend (Placeholders for prefix, suffix)" colspan="4"
                         id="legend"/>
                     <label string="Year:" id="label_year"/>
@@ -48,7 +61,8 @@ this repository contains the full copyright notices and license terms. -->
                 <tree string="Sequences">
                     <field name="name" select="1"/>
                     <field name="code" select="1"/>
-                    <field name="active" select="1"/>
+                    <field name="type" select="1"/>
+                    <field name="active" select="2"/>
                 </tree>
                 ]]>
             </field>
